tests/type-errors/no_container_partition_variable.arl
archetype no_container_partition_variable

asset et identified by cid { cid: int; }

asset e identified by eid {
	eid			: string;
	cells		: et partition;
}

variable c : et partition = []

entry start () {
	effect {
		()
	}
}
